<resources>
    <string name="app_name">MobileArea</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_github">GitHub</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="input_name">Name</string>
    <string name="input_last_name">Last name</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_conf_password">Confirm password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="title_activity_list_actions">ListActions</string>
    <string name="github_hint">GitHub username</string>
    <string name="github_button_text">Update</string>

    <string name="facebook_app_id">208702597192087</string> <string name="fb_login_protocol_scheme">fb208702597192087</string>
</resources>
